# culebrONT

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CITATION.cff  CulebrONT.sbatch  Makefile  README.md  README.rst  Snakefile  cluster_config.yaml  config-hub.yaml  config-itrop.yaml  config.yaml  pyproject.toml  setup.py  slurm_status.py  slurm_wrapper.py  submit_culebront.py  submit_culebront.sh  tools_path.yaml
.github/workflows/: python-package.yml
AdditionalScripts/: controllingMapping.py  rotateCircSeqs.R  run_mauve.py  tagCircSeq.R  toolbox.py  tools.py  which_version.py
Containers/: Dockerfile  KAT.def  Makefile  Medaka-gpu-1.0.1.def  R.def  Singularity.CulebrONT-pipeline.def  Singularity.LTR_retriever-20200128.def  Singularity.Medaka-gpu-0.11.5.def  Singularity.Quality.def  Singularity.R.def  Singularity.assemblytics-1.2.def  Singularity.assemblytics.def  Singularity.blobtools-1.1.1.def  Singularity.bloobtools-v1.1.1.def  Singularity.busco-4.0.4.def  Singularity.busco-4.1.4.def  Singularity.canu-1.9.def  Singularity.circlator-1.5.5.def  Singularity.conda.def  Singularity.culebront_tools.def  Singularity.diamond-0.9.30.def  Singularity.flye-2.6.def  Singularity.flye-2.7.1.def  Singularity.kat-latest.def  Singularity.medaka-gpu-0.11.5.def  Singularity.medaka-gpu-1.0.3.def  Singularity.medaka-gpu-1.2.def  Singularity.medaka_conda-gpu-1.0.3.def  Singularity.miniasm-0.3.def  Singularity.minipolish-0.1.2.def  Singularity.mummer-4beta.def  Singularity.nanopolish-0.11.3.def  Singularity.pilon-1.24.def  Singularity.quality.def  Singularity.quast-5.0.2.def  Singularity.racon-1.4.3.def  Singularity.raven_conda-gpu-v1.1.10.def  Singularity.report.def  Singularity.shasta-0.5.1.def  Singularity.shasta-0.7.0.def  (+9 more)
culebrONT/: VERSION  __init__.py  _version.py  culebrONT-complete.sh  edit_files.py  global_variable.py  global_variables.py  install.py  main.py  module.py  run.py  usefull_function.py
culebrONT/containers/: Dockerfile  Dockerfile_test  Singularity.culebront_tools.def  Singularity.report.def
culebrONT/install_files/: cluster_config_SLURM.yaml  config.yaml  tools_path.yaml
culebrONT/install_files/config_test/: config_A.yaml  config_AC.yaml  config_AP.yaml  config_APC.yaml  config_APCQ-CIRQ.yaml  config_APCQ.yaml  config_APQ.yaml
culebrONT/schemas/: config.schema.yaml  tools_path.schemas.yaml
culebrONT/scripts/: controllingMapping.py
culebrONT/snakeWrapper/: __init__.py  edit_files.py  global_variable.py  install.py  run.py  snakeWrapper.py  usefull_function.py
culebrONT/snakefiles/: Snakefile  assemblers.snake  circular.snake  correction.snake  polishers.snake  quality.snake
culebrONT/snakemake_scripts/: Report.Rmd  assembly-stats.py  get_benchmark.py  get_stats_busco.py  get_stats_flagstats.py  get_versions.py  makerange.py  rotateCircSeqs.R  run_mauve.py
divers/: Launcher.sh  Snakefile-bk_14052020  Snakefile_bk  config-hub_seb.yaml  config-seb.yaml  config2.yaml  config3.yaml  schema.json  schema.yaml  submit_culebront_seb.sh
docs/: requirements.txt
docs/source/: ABOUT.rst  FAQ.rst  INSTALL.rst  PROJECT.rst  README.rst  START.rst  TOOLS.rst  WORKFLOWS.rst  click.rst  conf.py  index.rst
docs/source/SupplementaryFiles/: CulebrONT
docs/source/_images/: circular.dot  nocircular.dot  quality.dot
docs/source/_static/: logo.css
envs/: R_for_culebront.yaml  R_for_culebront_cenv.yml  blobtools.yaml  busco-4.1.4.yaml  busco.yaml  canu-2.0.yaml  canu.yaml  circlator-1.5.2.yaml  circlator.yaml  diamond.2.0.4.yaml  diamond.yaml  environment.yaml  flye-2.8.1.yaml  flye.yaml  kat.yaml  mauve-2.4.0.yaml  mauve.yaml  mauve_cenv.yml  miniasm-0.3_minimap2-2.17.yaml  miniasm_minimap2.yaml  minimap2-2.17_samtools-1.10.yaml  minimap2_samtools.yaml  minipolish-0.1.2.yaml  minipolish.yaml  minipolish_cenv.yaml  mummer-3.23.yaml  mummer.yaml  nanopolish-0.13.2_minimap2-2.17_samtools-1.10_seqtk-1.3.yaml  nanopolish_minimap2_samtools_seqtk.yaml  quast-5.0.2.yaml  quast.yaml  racon-1.4.13_minimap2-2.17.yaml  racon_minimap2.yaml  raven-1.2.2.yaml  raven.yaml  run_circlator_cenv.yml  run_racon.yaml  smartdenovo-1.0.0.yaml  smartdenovo.yaml
gift_files/: CulebrONT_envmodules
gift_files/CulebrONT_SLURM/: cluster_config.yaml  config.yaml  settings.json
medakamodel/: .gitattributes  model.best.cat_acc.hdf5
reports/: Report.Rmd  getBenchmark.py  getStats.py  get_benchmark.py  get_stats_busco.py  get_stats_flagstats.py  get_versions.py
schemas/: config.schema.yaml  tools_path.schemas.yaml
snakefiles/: assemblers.snake  circular.snake  correction.snake  polishers.snake  quality.snake
